// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mainTheme should create the correct noLinkUnderline 1`] = `
[
  "
      &:hover,
      &:active,
      &:focus {
        text-decoration: none;
      }
    ",
]
`;

exports[`mainTheme should create the correct textBottomBorder helpers 1`] = `
[
  "
  &::after {
    transform: scaleX(0);
    transform-origin: bottom right;
    transition: transform ",
  "0.25",
  "s ease-out;
  }
",
]
`;

exports[`mainTheme should create the correct textBottomBorder helpers 2`] = `
[
  "
  &::after {
    transform: scaleX(0);
    transform-origin: bottom right;
    transition: transform ",
  "0.5",
  "s ease-out;
  }
",
]
`;

exports[`mainTheme should create the correct textBottomBorder helpers 3`] = `
[
  "
        position: relative;
        &::after {
          content: '';
          position: absolute;
          width: 100%;
          height: 2px;
          bottom: 0;
          left: 0;
          background-color: currentColor;
        }
      ",
]
`;

exports[`mainTheme should create the correct textBottomBorder helpers 4`] = `
[
  "
        ",
  "
  &::after {
    transform: scaleX(0);
    transform-origin: bottom right;
    transition: transform ",
  "0.25",
  "s ease-out;
  }
",
  "
        &:hover::after {
          ",
  "
  transform: scaleX(1);
  transform-origin: bottom left;
",
  "
        }
      ",
]
`;

exports[`mainTheme should work 1`] = `
{
  "animation": {
    "colorSwap": e {
      "id": "sc-keyframes-lhbgW",
      "inject": [Function],
      "name": "lhbgW",
      "rules": "
      from {
        color: #FFDD83;
      }
      to {
        color: #98DFD6;
      }
    ",
    },
    "horizontalMovement": e {
      "id": "sc-keyframes-ciDIWM",
      "inject": [Function],
      "name": "ciDIWM",
      "rules": "
      0% {
        transform: translateX(var(--translateX-begin));
      }
      100% {
        transform: translateX(var(--translateX-end));
      }
    ",
    },
    "moveToothFall": e {
      "id": "sc-keyframes-kAWDoo",
      "inject": [Function],
      "name": "kAWDoo",
      "rules": "
      0% {
      	top: -30px;
      }
      100% {
        top: 200%;
      }
    ",
    },
    "moveToothHorizontal": e {
      "id": "sc-keyframes-ifoKcn",
      "inject": [Function],
      "name": "ifoKcn",
      "rules": "
      0% {
        left: 0;
      }
      100% {
        left: -65%;
      }
    ",
    },
    "moveToothRotate": e {
      "id": "sc-keyframes-bOWqww",
      "inject": [Function],
      "name": "bOWqww",
      "rules": "
      0% {
        transform: rotate(180deg);
      }
      100% {
        transform: rotate(900deg);
      }
    ",
    },
    "moveToothVertical": e {
      "id": "sc-keyframes-bfulbY",
      "inject": [Function],
      "name": "bfulbY",
      "rules": "
      100% {
        top: var(--final-tooth-top);
      }
    ",
    },
    "particleFade": e {
      "id": "sc-keyframes-ggsnFx",
      "inject": [Function],
      "name": "ggsnFx",
      "rules": "
      0% {
        opacity: 1;
      }

      50% {
        opacity: 0.7;
      }

      100% {
        opacity: 1;
      }
    ",
    },
    "particleMovement": e {
      "id": "sc-keyframes-gJWpix",
      "inject": [Function],
      "name": "gJWpix",
      "rules": "
      from {
        transform: translate(-50%, var(--begin-y));
      }
      to {
        transform: translate(50%, var(--end-y));
      }
    ",
    },
    "particleScale": e {
      "id": "sc-keyframes-fzajMi",
      "inject": [Function],
      "name": "fzajMi",
      "rules": "
      0% {
        transform: scale3d(0.4, 0.4, 1);
      }

      50% {
        transform: scale3d(1, 1, 1);
      }

      100% {
        transform: scale3d(0.4, 0.4, 1);
      }
    ",
    },
    "portalGlow": e {
      "id": "sc-keyframes-gsjyoD",
      "inject": [Function],
      "name": "gsjyoD",
      "rules": "
      0% {
        box-shadow: inset 0px 0px 13px 1px var(--portal-glow-color);
      }
      50% {
        box-shadow: inset 0px 0px 20px 1px var(--portal-glow-color);
      }
      100% {
        box-shadow: inset 0px 0px 13px 1px var(--portal-glow-color);
      }
    ",
    },
    "rotateMovement": e {
      "id": "sc-keyframes-cABewS",
      "inject": [Function],
      "name": "cABewS",
      "rules": "
      from {
        rotate: 0deg;
      }
      to {
        rotate: var(--rotation);
      }
    ",
    },
    "toothRemove": e {
      "id": "sc-keyframes-jlxAJc",
      "inject": [Function],
      "name": "jlxAJc",
      "rules": "
      100% {
        opacity: 1;
      }
    ",
    },
    "verticalMovement": e {
      "id": "sc-keyframes-TpVAo",
      "inject": [Function],
      "name": "TpVAo",
      "rules": "
      0% {
        transform: translateY(var(--translateY-begin));
      }
      100% {
        transform: translateY(var(--translateY-end));
      }
    ",
    },
  },
  "breakpoints": {
    "lg": 1024,
    "md": 768,
    "sm": 375,
    "xl": 1440,
  },
  "colors": {
    "black": "#000000",
    "blue": "#00235B",
    "green": "#98DFD6",
    "orange": "#B04B2F",
    "white": "#FBFBFB",
    "yellow": "#FFDD83",
  },
  "fontStyles": {
    "robotoMono": {
      "light": [
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 300;
    ",
      ],
      "medium": [
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 500;
    ",
      ],
      "regular": [
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
      ],
      "thin": [
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 100;
    ",
      ],
    },
  },
  "fonts": {
    "baseSize": 20,
    "bodyFont": "fontFamily",
  },
  "helpers": {
    "border": {
      "gradientBottom": [
        "
        border-image-source: linear-gradient(
          to bottom,
          ",
        "#FFDD83",
        ",
          ",
        "#98DFD6",
        "
        );
      ",
      ],
      "gradientRight": [
        "
        border-image-source: linear-gradient(
          to right,
          ",
        "#FFDD83",
        ",
          ",
        "#98DFD6",
        "
        );
      ",
      ],
      "gradientShared": [
        "
  border: 1px solid;
  border-image-slice: 1;
",
      ],
    },
    "focusVisible": [
      "
      &:focus-visible {
        outline: ",
      "#FBFBFB",
      " auto 1px;
      }
    ",
    ],
    "noLinkUnderline": [
      "
      &:hover,
      &:active,
      &:focus {
        text-decoration: none;
      }
    ",
    ],
    "textBottomBorder": {
      "afterIncrease": [
        "
        &::after {
          ",
        "
  transform: scaleX(1);
  transform-origin: bottom left;
",
        "
        }
      ",
      ],
      "afterInitial": [Function],
      "afterShared": [
        "
        position: relative;
        &::after {
          content: '';
          position: absolute;
          width: 100%;
          height: 2px;
          bottom: 0;
          left: 0;
          background-color: currentColor;
        }
      ",
      ],
      "removeAfter": [
        "
        &:after {
          content: none;
        }
        &:hover {
          &:after {
            content: none;
          }
        }
      ",
      ],
      "transform": [Function],
    },
  },
  "logo": {
    "component": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "svg": "slLogo.svg",
  },
  "media": {
    "down": {
      "lg": "@media (width <= 1023px)",
      "md": "@media (width <= 767px)",
      "sm": "@media (width <= 374px)",
      "xl": "@media (width <= 1439px)",
    },
    "up": {
      "lg": "@media (width >= 1024px)",
      "md": "@media (width >= 768px)",
      "sm": "@media (width >= 375px)",
      "xl": "@media (width >= 1440px)",
    },
  },
  "spacing": {
    "verticalSpacer": {
      "large": 70,
      "small": 50,
    },
  },
  "typography": {
    "body": {
      "L": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "1rem",
        ";
      line-height: normal;
    ",
      ],
      "M": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "0.9rem",
        ";
      line-height: normal;
    ",
      ],
      "S": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "0.8rem",
        ";
      line-height: normal;
    ",
      ],
      "XL": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 500;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "1.5rem",
        ";
      line-height: normal;
    ",
      ],
      "XS": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 500;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "0.55rem",
        ";
      line-height: normal;
    ",
      ],
    },
    "heading": {
      "heading1": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "3rem",
        ";
      line-height: normal;
    ",
      ],
      "heading2": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 400;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "1.5rem",
        ";
      line-height: normal;
    ",
      ],
    },
    "label": {
      "L": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 500;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "1rem",
        ";
      line-height: normal;
      text-transform: uppercase;
    ",
      ],
      "XS": [
        "
      ",
        "
      font-family: ",
        "fontFamily",
        ";
      font-weight: 500;
    ",
        "
      color: ",
        "#FBFBFB",
        ";
      font-size: ",
        "0.5rem",
        ";
      line-height: normal;
      text-transform: uppercase;
    ",
      ],
    },
  },
  "zIndex": {
    "modal": 200,
  },
}
`;
